Update in iam-device spec

--- a/iam-device.yaml
+++ b/iam-device.yaml
@@ -6,7 +6,7 @@ paths:
   /devices:
     post:
       summary: Create Device
-      description: Creates a new device with the provided details.
+      description: This endpoint is used to create a new device within a specific account. Each device must have a unique combination of serial number, model, and manufacturer. Optionally, the device can be associated with one or more groups.
       parameters:
         - name: accountId
           in: query
@@ -41,7 +41,7 @@ paths:
       tags:
         - Device
       summary: List Devices
-      description: List all devices that belong to an account.
+      description: This endpoint retrieves a list of all devices that belong to an account. Clients can use this endpoint to search and paginate through devices. It supports optional query parameters to filter results based on search queries, account identifiers, and pagination settings. 
       parameters:
         - name: q
           in: query
@@ -74,7 +74,7 @@ paths:
       tags:
         - Device
       summary: Update Device
-      description: Update details of an existing device.
+      description: This endpoint allows updating the details of an existing device. The device is identified by its unique identifier provided in the path parameter. The request body must include the updated details of the device. It is useful for modifying device attributes such as model, manufacturer, firmware, and description.
       parameters:
         - name: deviceId
           in: path
@@ -88,7 +88,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/DeviceCreateRequest'
+              $ref: '#/components/schemas/DeviceUpdateRequest'
       responses:
         '200':
           description: Device successfully updated.
@@ -100,7 +100,7 @@ paths:
       tags:
         - Device
       summary: Get Device
-      description: Retrieve details of a specific device.
+      description: This endpoint retrieves the detailed information of a specific device identified by its unique identifier provided in the path parameter. This is useful for obtaining the complete details of a device, including its serial number, model, manufacturer, firmware, description, and metadata such as create and update timestamps.
       parameters:
         - name: deviceId
           in: path
@@ -119,7 +119,7 @@ paths:
       tags:
         - Device
       summary: Delete Device
-      description: Delete a specific device.
+      description: This endpoint deletes a specific device identified by its unique identifier provided in the path parameter. This is useful for removing devices that are no longer needed or being decommissioned. Once deleted, the device's data will be permanently removed from the system and will not be retrievable.
       parameters:
         - name: deviceId
           in: path
@@ -135,7 +135,7 @@ paths:
       tags:
         - Group Association
       summary: Get Groups associated with Device
-      description: Retrieve the groups associated with a specific device.
+      description: This endpoint retrieves the list of groups associated with a specific device identified by its unique identifier provided in the path parameter. It is useful for understanding the associations between devices and groups within the system.
       parameters:
         - name: deviceId
           in: path
@@ -155,7 +155,17 @@ paths:
       tags:
         - Certificate Association
       summary: Associate Device with Certificate
-      description: Associate a device with a certificate.
+      description: |
+        This endpoint creates and associates a certificate with a specific device identified by its unique identifier provided in the path parameter. The request body must include the details of the certificate to be created and associated with the device. This is useful for securely managing device authentication and ensuring that devices can establish trusted connections. 
+        
+        There are three ways to create a certificate:
+          - Cloud Core CA
+          - External Certificate
+          - Certificate Signing Request (CSR)
+          
+        **Note :** 
+         Each device can be hold upto a maximum of 5 certificates.
+        
       parameters:
         - name: deviceId
           in: path
@@ -172,12 +182,15 @@ paths:
               $ref: '#/components/schemas/CertificateAssociationRequest'
             examples:
               "Cloud Core Certificate":
+                description: Use certCommonName to generate a certificate from the Cloud Core Certificate Authority
                 value:
                   certCommonName: "string"
               "Certificate Signing Request":
+                description:  Provide a Certificate Signing Request to generate a certificate.
                 value:
                   csr: "string"
               "External Certificate":
+                description : Provide an existing public certificate and CA certificate origin.
                 value:
                   publicCert: "string"
                   caCertOrigin: "string"
@@ -192,7 +205,7 @@ paths:
       tags:
         - Certificate Association
       summary: Get Certificates associated with Device
-      description: Retrieve the certificates associated with a specific device.
+      description: This endpoint retrieves the certificates associated with a specific device identified by its unique identifier provided in the path parameter. This is useful for viewing and managing the certificates that have been issued to a device, ensuring that you can keep track of the certificate's details.
       parameters:
         - name: deviceId
           in: path
@@ -212,7 +225,7 @@ paths:
       tags:
         - Certificate Association
       summary: Delete Certificate
-      description: Remove the association of a device with a certificate and delete the certificate.
+      description: This endpoint removes the association of a device with a specific certificate and deletes the certificate identified by its unique identifier provided in the path parameter. This is useful for deleting certificates that are no longer needed or have been compromised, ensuring that only valid and necessary certificates are associated with a device.
       parameters:
         - name: deviceId
           in: path
@@ -239,6 +252,21 @@ components:
         serialNumber:
           type: string
           description: Device Serial Number.
+        model:
+          type: string
+          description: Model to which the device belongs.
+        manufacturer:
+          type: string
+          description: Manufacturer associated with the device.
+        firmware:
+          type: string
+          description: Firmware details of the device.
+        description:
+          type: string
+          description: Short note about device details.
+    DeviceUpdateRequest:
+      type: object
+      properties:
         model:
           type: string
           description: Model to which the device belongs.
